Fix wrong file names

--- a/_posts/2020-02-24-TIL1.md
+++ b/_posts/2020-02-24-TIL1.md
@@ -1,10 +1,24 @@
 ---
 title: "[TIL #1] WSL 설치, VS Code 개발 환경 세팅"
-excerpt: ""
+excerpt: "
+Mac에서 Windows로 개발 환경 옮기기,
+WSL Ubuntu 설치,
+Text editor: VS Code 셋팅,
+gcc 등의 C 개발 환경 셋팅
+"
 
 date: 2020-02-26 23:22:48 +0900
 last_modified_at: 2020-03-03 23:24:52 +0900
-categories: TIL 42Seoul
+
+categories:
+  - TIL
+  - 42Seoul
+tags:
+  - TIL
+  - WSL
+  - Ubuntu
+  - VS Code
+  - gcc
 ---
 
 # 학습 레포트 (Today I Learned)
