Change \ to double space

--- a/_posts/2020-02-24-TIL1.md
+++ b/_posts/2020-02-24-TIL1.md
@@ -35,12 +35,10 @@ last_modified_at: 2020-03-04 00:38:28 +0900
 
 > 10:00 ~ 01:40 (집)
 
-- [ 개인 스케쥴러: Life RPG Ignition (Season 3) ]\
-
+- [ 개인 스케쥴러: Life RPG Ignition (Season 3) ]  
   ☞ <https://goo.gl/qnehEQ>{:target="_blank"}
 
-- [ 오늘 하루는? - 일일 영상 리뷰]
-
+- [ 오늘 하루는? - 일일 영상 리뷰]  
   ☞ <https://www.youtube.com/channel/UCYPWzViA-uq9sBop7ssYaEg>{:target="_blank"}
 
 ## 3. 학습 범위 및 주제
@@ -81,7 +79,7 @@ last_modified_at: 2020-03-04 00:38:28 +0900
 다른 교육생들과의 협업, 토론 내용(권고)
 ```
 
-[] : 프로젝트 관련 공부\
+[] : 프로젝트 관련 공부  
 () : 기타 공부
 
 ```text
