--- a/_posts/2020-02-29-TIL6.md
+++ b/_posts/2020-02-29-TIL6.md
@@ -31,12 +31,10 @@ last_modified_at: 2020-03-04 01:36:39 +0900
 
 > 19:00 ~ 02:00 (집)
 
-- [ 개인 스케쥴러: Life RPG Ignition (Season 3) ]\
-
+- [ 개인 스케쥴러: Life RPG Ignition (Season 3) ]  
   ☞ <https://goo.gl/qnehEQ>{:target="_blank"}
 
-- [ 오늘 하루는? - 일일 영상 리뷰]
-
+- [ 오늘 하루는? - 일일 영상 리뷰]  
   ☞ <https://www.youtube.com/channel/UCYPWzViA-uq9sBop7ssYaEg>{:target="_blank"}
 
 ## 3. 학습 범위 및 주제
@@ -77,7 +75,7 @@ last_modified_at: 2020-03-04 01:36:39 +0900
 다른 교육생들과의 협업, 토론 내용(권고)
 ```
 
-[] : 프로젝트 관련 공부\
+[] : 프로젝트 관련 공부  
 () : 기타 공부
 
 ```text
@@ -107,7 +105,7 @@ last_modified_at: 2020-03-04 01:36:39 +0900
       for (i = 0; i < 10; i++)
         arr[i] = i;
       for (i = 0; i < 10; i++)
-        printf("%d", arr[i]);\
+        printf("%d", arr[i]);[] : 프로젝트 관련 공부  
       // 0123456789
       return (arr);
     }
