--- a/_posts/2020-03-03-TIL9.md
+++ b/_posts/2020-03-03-TIL9.md
@@ -33,12 +33,10 @@ last_modified_at: 2020-03-04 02:51:52 +0900
 
 > 13:00 ~ 03:00 (집)
 
-- [ 개인 스케쥴러: Life RPG Ignition (Season 3) ]\
-
+- [ 개인 스케쥴러: Life RPG Ignition (Season 3) ]  
   ☞ <https://goo.gl/qnehEQ>{:target="_blank"}
 
-- [ 오늘 하루는? - 일일 영상 리뷰]
-
+- [ 오늘 하루는? - 일일 영상 리뷰]  
   ☞ <https://www.youtube.com/channel/UCYPWzViA-uq9sBop7ssYaEg>{:target="_blank"}
 
 ## 3. 학습 범위 및 주제
@@ -76,7 +74,7 @@ last_modified_at: 2020-03-04 02:51:52 +0900
 오늘 발견한 문제(버그, 몰랐던 것,...) 해결 방안 (필수)
 다른 교육생들과의 협업, 토론 내용(권고)
 
-[] : 프로젝트 관련 공부\
+[] : 프로젝트 관련 공부  
 () : 기타 공부
 ```
 
