--- a/_posts/2020-02-27-TIL4.md
+++ b/_posts/2020-02-27-TIL4.md
@@ -2,19 +2,23 @@
 title: "[TIL #4] BOJ: Tetromino, 42서울: libft"
 excerpt: "
    TIL
-  / 42Seoul
+  / 42 Seoul
 
   / BOJ
   / Brute Force
+  / 14500 - Tetromino
+
   / libft
   / memory
 "
 tags:
   - TIL
-  - 42Seoul
+  - 42 Seoul
 
   - BOJ
   - Brute Force
+  - 14500 - Tetromino
+
   - libft
   - memory
 categories:
@@ -43,20 +47,20 @@ last_modified_at: 2020-03-04 01:16:08 +0900
 
 - Backjoon Algorithm Online Judge (C++)
   - Brute Force
-    - Tetromino (Success!)
+    - 14500 Tetromino (Success!)
 
-- libft
-  - memset
-  - bzero
-  - memcpy
-  - memccpy
-  - memmove
-  - memchr
-  - memcmp
-
-- Unit-Test
-  - Make a main file to test functions
-  - Git Clone libft-unit-test
+- 42 Seoul
+  - libft
+    - memset
+    - bzero
+    - memcpy
+    - memccpy
+    - memmove
+    - memchr
+    - memcmp
+  - Unit-Test
+    - Make a main file to test functions
+    - Git Clone libft-unit-test
 
 ## 4. 동료 학습 방법
 
@@ -96,7 +100,7 @@ last_modified_at: 2020-03-04 01:16:08 +0900
 ```text
 (3H) Backjoon Algorithm Online Judge (C++)
   - Brute Force
-    - Tetromino (Success!)
+    - 14500 Tetromino (Success!)
       시간 초과가 자꾸 나서 도대체 이유가 뭔가 했는데
       긴 함수 하나를 통째로 다시 바깥으로 빼버리니
       뜬금없이 테스트 통과를 해버렸다.
