--- a/_posts/2020-03-04-TIL10.md
+++ b/_posts/2020-03-04-TIL10.md
@@ -54,7 +54,7 @@ last_modified_at: 2020-03-05 04:40:16 +0900
 ## 3. 학습 범위 및 주제
 
 - Backjoon Algorithm Online Judge (C++)
-  - Brute Force (N&M)
+  - Brute Force (N과 M)
     - 15649 N과 M
 
 - 42 Seoul
@@ -75,7 +75,8 @@ last_modified_at: 2020-03-05 04:40:16 +0900
 
 ## 5. 학습 목표
 
-- 개인 블로그 제작 후 배포
+- BOJ 수열/순열 문제 풆고 이해하기
+- get_next_line 문제 이해 및 개념 익히기
 
 ## 6. 과제 제출 repository 주소
 
@@ -96,7 +97,7 @@ last_modified_at: 2020-03-05 04:40:16 +0900
 ```
 
 - (2H) Backjoon Algorithm Online Judge (C++)
-  - Brute Force (N&M)
+  - Brute Force (N과 M)
     - 15649 N과 M
 
 순열의 모든 경우의 수를 나열하는 문제였으나, 도저히 어떻게 풀어나갈지에 대한 감이 잡히질 않아, 결국 인터넷에 나와있는 코드를 참고하며 문제를 풀었다. 즉, 베꼈다.
