Edit image link: fullscreen

--- a/_posts/2020-03-01-TIL7.md
+++ b/_posts/2020-03-01-TIL7.md
@@ -101,7 +101,9 @@ last_modified_at: 2020-03-04 01:54:47 +0900
 
 ```
 
-![old_lstadd_front](/assets/images/posts/2020-03-01-TIL7/old_lstadd_front.png)
+[
+  ![old_lstadd_front](/assets/images/posts/2020-03-01-TIL7/old_lstadd_front.png)
+](/assets/images/posts/2020-03-01-TIL7/old_lstadd_front.png)
 
 ## 8. 학습 내용에 대한 개인적인 총평 (최소 5줄 이상)
 
