--- a/_posts/2020-03-02-TIL8.md
+++ b/_posts/2020-03-02-TIL8.md
@@ -90,13 +90,17 @@ last_modified_at: 2020-03-04 01:55:26 +0900
 
 ```
 
-![ft_lstadd_front](/assets/images/posts/2020-03-02-TIL8/ft_lstadd_front.png)
+[
+  ![ft_lstadd_front](/assets/images/posts/2020-03-02-TIL8/ft_lstadd_front.png)
+](/assets/images/posts/2020-03-2-TIL8/ft_lstadd_front.png)
 
 연결리스트 구조를 이해하기 어려워, 직접 그림으로 그린 모습.
 
 - 나와 같이 공부하던 동료에게 그나마 내가 아는 정보라도 설명하기 위해 그리기 시작한 그림인데, 오히려 그리고 설명하다 보니 내가 헷갈려 하던 포인터/리스트 관련 개념들이 깔끔하게 이해되었다.
 
-![ft_lstclear](/assets/images/posts/2020-03-02-TIL8/ft_lstclear.png)
+[
+  ![ft_lstclear](/assets/images/posts/2020-03-02-TIL8/ft_lstclear.png)
+](/assets/images/posts/2020-03-02-TIL8/ft_lstclear.png)
 
 아래 함수를 테스트 프로그램에 돌리면 KO가 뜨는 이유에 대해 고민하던 모습.
 
