--- a/_posts/2020-03-04-TIL10.md
+++ b/_posts/2020-03-04-TIL10.md
@@ -117,8 +117,13 @@ tasks.json과 launch.json을 얼마나 재생성하고 수정했는지 모른다
 이는 일시적으로 cmd.exe를 기본 쉘로 지정하고, 폴더명을 수정하자 해결되었다.  
 그리고 여담이지만, 그 와중에 알게 된 경악스러운 사실이 하나 있었다.
 
-![g++1](/assets/images/posts/2020-03-04-TIL10/g++1.png)
-![g++2](/assets/images/posts/2020-03-04-TIL10/g++2.png)
+[
+  ![g++1](/assets/images/posts/2020-03-04-TIL10/g++1.png)
+](/assets/images/posts/2020-03-04-TIL10/g++1.png)
+
+[
+  ![g++2](/assets/images/posts/2020-03-04-TIL10/g++2.png)
+](/assets/images/posts/2020-03-04-TIL10/g++2.png)
 
 나는 대체 몇 개의 C / C++ 컴파일러를 깔아놨던 것인가...  
 아직 개발 환경 셋팅을 깔끔하게 할 수 있는 날까지는 한참 남은 것 같다.
