--- a/_posts/2020-02-27-TIL4.md
+++ b/_posts/2020-02-27-TIL4.md
@@ -1,12 +1,12 @@
 ---
-title: "[TIL #4] BOJ: Tetromino, 42서울: libft"
+title: "[TIL #4] BOJ: 테트로미노, 42서울: libft"
 excerpt: "
    TIL
   / 42 Seoul
 
   / BOJ
   / Brute Force
-  / 14500 - Tetromino
+  / 14500 - 테트로미노
 
   / libft
   / memory
@@ -17,7 +17,7 @@ tags:
 
   - BOJ
   - Brute Force
-  - 14500 - Tetromino
+  - 14500 - 테트로미노
 
   - libft
   - memory
@@ -47,7 +47,7 @@ last_modified_at: 2020-03-04 01:16:08 +0900
 
 - Backjoon Algorithm Online Judge (C++)
   - Brute Force
-    - 14500 Tetromino (Success!)
+    - 14500 테트로미노 (Success!)
 
 - 42 Seoul
   - libft
@@ -75,7 +75,7 @@ last_modified_at: 2020-03-04 01:16:08 +0900
 
 ## 5. 학습 목표
 
-- C++ STL 사용법 익혀서 Tetromino 풀기
+- C++ STL 사용법 익혀서 테트로미노 풀기
 - 메모리 구조와 포인터의 관계 더 상세하게 이해하기
 - 프랑스 선배들의 unit-test 클론해서 Makefile 수정 후 작동
 
@@ -100,7 +100,7 @@ last_modified_at: 2020-03-04 01:16:08 +0900
 ```text
 (3H) Backjoon Algorithm Online Judge (C++)
   - Brute Force
-    - 14500 Tetromino (Success!)
+    - 14500 테트로미노 (Success!)
       시간 초과가 자꾸 나서 도대체 이유가 뭔가 했는데
       긴 함수 하나를 통째로 다시 바깥으로 빼버리니
       뜬금없이 테스트 통과를 해버렸다.
